BR second commit

--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src='https://unpkg.com/tesseract.js@v2.1.0/dist/tesseract.min.js'></script>
-    <script src="script.js" defer></script>
+    <title>Project</title>
 </head>
 <body>
-    <video width="720" height="560" autoplay muted></video>
-    <pre data-text style="font-size: 2rem; font-family: inherit; width: 100%; white-space: pre-wrap;"></pre>
+    <h1>Audi-Yo!</h1>
+    <button onclick="location.href = 'audio-reader.html'">Get Started</button>
 </body>
 </html>
